force-app/main/default/objects/ssot__FinancialHolding__dlm/fields/ssot__ChangePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangePercent__c</fullName>
    <label>Change Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>