force-app/main/default/objects/ssot__FinancialHolding__dlm/fields/ssot__EquityCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__EquityCategory__c</fullName>
    <label>Equity Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EquityCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>