force-app/main/default/objects/ssot__FinancialHolding__dlm/fields/ssot__GainLossAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__GainLossAmount__c</fullName>
    <label>Gain Loss Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GainLossAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>