force-app/main/default/objects/ssot__FinancialHolding__dlm/fields/ssot__HoldingCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__HoldingCount__c</fullName>
    <label>Holding Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HoldingCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>