force-app/main/default/objects/ssot__FinancialHolding__dlm/fields/ssot__MarketValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MarketValueAmount__c</fullName>
    <label>Market Value Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MarketValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>