force-app/main/default/objects/ssot__FinancialHolding__dlm/fields/ssot__PurchasePriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PurchasePriceAmount__c</fullName>
    <label>Purchase Price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PurchasePriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>