force-app/main/default/objects/ssot__FinancialHolding__dlm/fields/ssot__rel_1697761236895_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761236895_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FinancialHolding_FinancialAccountId__rel</label>
    <referenceTo>ssot__FinancialAccount__dlm</referenceTo>
    <relationshipLabel>FinancialHolding_FinancialAccountId__rel</relationshipLabel>
    <relationshipName>rel_1697761236895_end</relationshipName>
    <type>Lookup</type>
</CustomField>